[tool.poetry]
name = "dropboxignore"
version = "2.0.0"
description = "It's all about the missing .dropboxignore file."
authors = ["Panagiotis Simakis <sp1thas@autistici.org>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "dropboxignore", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
